Je préserve mes modifications actuelles avant de les corriger intégralement